syntax = "proto3";

option go_package = "github.com/zeropsio/zcli/src/protocol/vpnproxy";

package zeropsVpnProtocol;

service ZeropsVpnProtocol {
    rpc startVpn (startVpnRequest) returns (startVpnResponse);
    rpc prolongVpn (prolongVpnRequest) returns (prolongVpnResponse);
}

message error {
    errorCode code = 1;
    string message = 2;
}

enum errorCode {
    NO_ERROR = 0;
    INTERNAL_SERVER_ERROR = 1;
    INSTANCE_NOT_FOUND = 2;
    PROXY_IS_FULL = 3;
    INVALID_ACCESS_TOKEN = 4;
    VPN_SESSION_EXPIRED = 5;
    MAX_PARALLEL_VPN_LIMIT = 6;
    INVALID_PREFERRED_PORT = 7;
    PREFERRED_PORT_UNAVAILABLE = 8;
}

message IP {
    bytes address = 1;
}

message IPRange {
    bytes ip = 1;
    bytes mask = 2;
}

message Timestamp {
    bool isSet = 1;
    int64 seconds = 2;
    int32 nanos = 3;
}

message startVpnRequest {
    string accessToken = 1;
    uint32 preferredPortMin = 2;
    uint32 preferredPortMax = 3;
}

message startVpnResponse {
    error error = 1;
    startVpnOutDto vpn = 2;
}

message startVpnOutDto {
    int64 port = 1;
    string serverPublicKey = 2;
    IP assignedClientIp = 3;
    IP serverIp = 4;
    IPRange vpnIpRange = 5;
    IPRange vpnIp4Range = 7;
    IP dnsIp = 6;
    IP dnsIp4 = 8;
    IP assignedClientIp4 = 9;
    IP serverIp4 = 10;
}

message prolongVpnRequest {
    string accessToken = 1;
}

message prolongVpnResponse {
    error error = 1;
}
